# own-clawagent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh.md  TEST_REPORT.md  _append_mcp_doc.py  price.toml  price.txt  pyproject.toml  多层提示词设计.md  知识清单.md  记忆系统实施文档.md  记忆训练强化.txt
memories/: sessions.db  sessions.db-shm  sessions.db-wal
prompts/: README.md
prompts/agents/coder/: identity.md  soul.md
prompts/agents/critic/: identity.md  soul.md  (+1 more)
prompts/shared/: agents.md  bootstrap.md  search-rules.md  worker-coder.md  worker-critic.md  worker-researcher.md  worker-writer.md
src/clawagent/: __init__.py  agent.py  cancel_token.py  config.py  conversation_log.py  main.py  model_discovery.py  model_factory.py  platforms.py  prompt_builder.py  stream_events.py  stream_processor.py  types.py  ui.py  ui_stream.py  utils.py
tests/: test_agent.py  test_api_pool.py  test_browser.py  test_cancel_token.py  test_compression.py  test_config.py  test_conversation_log.py  test_functional.py  test_integration.py  test_memory_facts.py  test_memory_privacy.py  test_memory_profile.py  test_memory_tools.py  test_model_factory.py  test_orchestrator.py  test_preferences.py  test_prompt_builder.py  test_rag.py  test_security_audit.py  test_security_middleware.py  test_security_permissions.py  test_session_manager.py  test_stream_events.py  test_streaming.py  test_summarizer.py  test_tools.py  test_ui.py  test_web_search.py  test_worker_base.py  test_worker_config.py  test_worker_factory.py  test_worker_impl.py  test_worker_registry.py
测试/: test.txt
(+71 files in other folders)
