[project]
name = "clawagent"
version = "0.1.0"
description = "A LangChain/LangGraph agent powered by Anthropic Claude"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
dependencies = [
    "langchain>=1.3.11,<2.0.0",
    "langchain-core>=1.4.8,<2.0.0",
    "langchain-anthropic>=1.4.7,<2.0.0",
    "langgraph>=1.2.6,<2.0.0",
    "langchain-community>=0.4.2,<1.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "rich>=13.0.0,<14.0.0",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "prompt-toolkit>=3.0.52",
    "chromadb>=1.2.0",
    "jieba>=0.42.1,<1.0.0",
    "pyfiglet>=1.0.4",
]

[project.scripts]
clawagent = "clawagent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002"]

[tool.ruff.lint.isort]
known-first-party = ["clawagent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.14"
strict = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "ruff>=0.15.19,<1.0.0",
    "mypy>=2.1.0,<3.0.0",
    "pytest>=8.0,<9.0.0",
]
